--- a/index.html
+++ b/index.html
@@ -566,6 +566,8 @@
                                     <div class="beach-experience">
                                         <img src="images/day-6-beaches.jpg" alt="Beautiful beach views" class="story-photo landscape clickable-image">
                                         <img src="images/day-6-beach.jpg" alt="Sandy busy beach" class="story-photo landscape clickable-image">
+                                        <img src="images/day-6-beach-wave.jpg" alt="Wave crashing on beach" class="story-photo landscape clickable-image">
+                                        <img src="images/day-6-beach-precipice.jpg" alt="View from beach precipice" class="story-photo landscape clickable-image">
                                     </div>
                                 </div>
                                 <p>Just 4 kilometers away, we visited Padang Padang Beach for a quick dip before heading to the airport. Stairs led down through a narrow crevice in the limestone cliff to the beach below. The beach's edge featured fascinating cave-like rock formations with tunnels, while granite boulders were scattered across the sand.</p>
