--- a/index.html
+++ b/index.html
@@ -232,10 +232,9 @@
                                     <div class="coffee-category">
                                         <h4>Coffee Varieties:</h4>
                                         <ul>
-                                            <li>Ginseng Coffee</li>
-                                            <li>Coconut Coffee</li>
                                             <li>Vanilla Coffee</li>
-                                            <li>Pure Coco</li>
+                                            <li>Coconut Coffee</li>
+                                            <li>Pure Cacao Coffee</li>
                                             <li>Chocolate Coffee</li>
                                             <li>Avocado Coffee</li>
                                             <li>Bali Coffee</li>
